--- a/templates/base.html
+++ b/templates/base.html
@@ -216,7 +216,7 @@
                   </a>
 
                   <ul class="social-link tt-animate ltr mt-20">
-                  <li><a href="https://www.facebook.com/profile.php?id=100012729397614"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="https://www.facebook.com/profigor"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="https://twitter.com/ProfIgorAlmeida"><i class="fa fa-twitter"></i></a></li>
                   <li><a href="https://www.linkedin.com/in/igor-almeida-308655106/"><i class="fa fa-linkedin"></i></a></li>
                   <li><a href="http://infantinho.xyz/blog/rss"><i class="fa fa-rss"></i></a></li>
@@ -243,7 +243,7 @@
                 <div class="container">
                     <ul>
                       <li><a href="http://www.infantinho.xyz">Blogue</a></li>
-                      <li><a href="https://www.facebook.com/colegioinfantedhenrique/">Facebook - Colégio Infante</a></li>
+                      <li><a href="https://www.facebook.com/colegioinfantedhenrique">Facebook - Colégio Infante</a></li>
                       <li><a href="https://www.youtube.com/channel/UCIrVEWJXqeHsGtPQarhPdxw">Youtube - infantinho</a></li>
                     </ul>
                 </div><!-- /.container -->
