--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
         <link href="{% static 'assets/owl.carousel/assets/owl.carousel.css' %}" rel="stylesheet">
         <link href="{% static 'assets/owl.carousel/assets/owl.theme.default.min.css' %}" rel="stylesheet">
         <!-- materialize -->
-        <link href="{% static 'assets/materialize/css/materialize.min.css' %}" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
         <!-- Bootstrap -->
         <link href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
         <!-- shortcodes -->
@@ -58,6 +58,7 @@
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+    {% block headcontent %}{% endblock headcontent%}
     </head>
 
     <body id="top" class="has-header-search">
@@ -75,7 +76,7 @@
                         <!--logo end-->
 
                         <!--mega menu start-->
-                        <ul class="menuzord-menu pull-right light">
+                        <ul class="menuzord-menu light">
                             <li><a href="javascript:void(0)">Blogue</a>
                                 <ul class="dropdown">
                                     <li><a href="#">Ver Mensagens</a>
@@ -267,7 +268,7 @@
         <!-- jQuery -->
         <script src="{% static 'assets/js/jquery-2.1.3.min.js' %}"></script>
         <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script>
-        <script src="{% static 'assets/materialize/js/materialize.min.js' %}"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
         <script src="{% static 'assets/js/smoothscroll.min.js' %}"></script>
         <script src="{% static 'assets/js/jquery.easing.min.js' %}"></script>
         <script src="{% static 'assets/js/menuzord.js' %}"></script>
@@ -277,7 +278,7 @@
         <script src="{% static 'assets/js/masonry.pkgd.min.js' %}"></script>
         <script src="{% static 'assets/owl.carousel/owl.carousel.min.js' %}"></script>
         <script src="{% static 'assets/js/scripts.js' %}"></script>
-
+        {% block bellow_js %}{% endblock bellow_js %}
         <!-- RS5.0 Core JS Files -->
         <script src="{% static 'assets/revolution/js/jquery.themepunch.tools.min.js' %}"></script>
         <script src="{% static 'assets/revolution/js/jquery.themepunch.revolution.min.js' %}"></script>
