solving some links in blog

--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
       {% block content %}
-      {% include 'top.html' %}
       {% load staticfiles %}
+      {% include "stmenu.html" %}
         <!-- blog section start -->
         <section class="blog-section section-padding">
             <div class="container">
