--- a/blog/templates/blog/create.html
+++ b/blog/templates/blog/create.html
@@ -4,7 +4,7 @@
    {% load material_form %}
   {% endblock headcontent%}
         {% block content %}
-        {% include 'top.html' %}
+        {% include 'stmenu.html' %}
           <section class="section-padding">
             <div class="container">
               <form method='POST' action='' enctype='multipart/form-data' >
