--- a/blog/templates/blog/grid.html
+++ b/blog/templates/blog/grid.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
       {% block content %}
+      {% load staticfiles %}
+      {% include "tmenu.html" %}
       <!-- start revolution slider 5.0 -->
         <section class="rev_slider_wrapper">
          <div class="rev_slider materialize-slider" >
