--- a/templates/stmenu.html
+++ b/templates/stmenu.html
@@ -6,7 +6,7 @@
                     <div id="materialize-menu" class="menuzord">
 
                         <!--logo start-->
-                        <a href="" class="logo-brand">
+                        <a href="{% url 'index' %}" class="logo-brand">
                             <img class="logo-dark" src="{% static 'slogo_azul.png' %}" height="50" width="200" alt=""/>
                             <img class="logo-light" src="{% static 'slogo_branco.png' %}" height="50" width="200" alt=""/>
                         </a>
@@ -14,6 +14,9 @@
 
                         <!--mega menu start-->
                         <ul class="menuzord-menu light">
+                            {% if request.user.is_superuser %}
+                            <li><a href="{% url 'herd:upload' %}">Upload</a></li>
+                            {% endif %}
                             <li><a href="javascript:void(0)">Blogue</a>
                                 <ul class="dropdown">
                                     <li><a href="{% url 'index' %}">Ver Mensagens</a>
