--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
         <meta name="infantinho" content="Portal pedagógico dos alunos do pré-escolar e do 1.º Ciclo do Colégio Infante D. Henrique">
         <meta name="keywords" content="portal pedagógico, infantinho, escola, colégio, pedagogia, pedagogia ativa, 1.º ciclo, projetos, aprendizagem por projetos, planos de trabalho">
         <meta name="author" content="prof.igor@colegioinfante.info">
+        <meta name="google-site-verification" content="ytetT08va-04c2ms-jxEVxO-OnPbrxT3Dl1IpSsSv4E" />
 
         <title>infantinho.xyz</title>
 
@@ -51,6 +52,8 @@
         <!-- RS5.0 Layers and Navigation Styles -->
         <link rel="stylesheet" type="text/css" href="{% static 'assets/revolution/css/layers.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'assets/revolution/css/navigation.css' %}">
+        <!-- Cookie Consent -->
+        <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.2/cookieconsent.min.css" />
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -59,6 +62,11 @@
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
     {% block headcontent %}{% endblock headcontent%}
+    <script type="text/javascript"> //<![CDATA[
+var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.comodo.com/" : "http://www.trustlogo.com/");
+document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
+//]]>
+</script>
     </head>
 
     <body id="top" class="has-header-search">
@@ -137,6 +145,7 @@
         <script src="{% static 'assets/owl.carousel/owl.carousel.min.js' %}"></script>
         <script src="{% static 'assets/js/scripts.js' %}"></script>
         {% block bellow_js %}{% endblock bellow_js %}
+        <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.2/cookieconsent.min.js"></script>
         <!-- RS5.0 Core JS Files -->
         <script src="{% static 'assets/revolution/js/jquery.themepunch.tools.min.js' %}"></script>
         <script src="{% static 'assets/revolution/js/jquery.themepunch.revolution.min.js' %}"></script>
@@ -236,6 +245,56 @@
             });
         </script>
         {% endverbatim %}
+        <script language="JavaScript" type="text/javascript">
+TrustLogo("https://storage.googleapis.com/cidh1c/static/comodo_secure_seal_76x26_transp.png", "CL1", "none");
+</script>
+<a  href="https://www.instantssl.com/" id="comodoTL">Essential SSL</a>
     </body>
 </html>
 {% block bellow_html %}{% endblock bellow_html %}
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-80320643-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<script>
+window.addEventListener("load", function(){
+window.cookieconsent.initialise({
+  "palette": {
+    "popup": {
+      "background": "#000"
+    },
+    "button": {
+      "background": "#f1d600"
+    }
+  },
+  "position": "bottom-right",
+  "location": "true",
+  "content": {
+    "message": "Usamos cookies no nosso site para melhorar o desempenho e a sua experiência como utilizador.",
+    "dismiss": "OK!",
+    "link": "mais sobre cookies"
+  }
+})});
+</script>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1694858034111220',
+      xfbml      : true,
+      version    : 'v2.6'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/pt_pt/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
