--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,20 +1,30 @@
 {% extends "base.html" %}
-{% block head_extra %}
+{% load staticfiles %}
+{% block headcontent %}
 <!-- Search for these meta tags -->
 <meta property="og:title"              content="{{ instance.title }}" />
-<meta property="og:image"              content="{{ instance.image.medium.url }}" />
+{% if instance.headimage %}
+<meta property="og:image"              content="{{ instance.headimage.medium.url }}" />
+{% else %}
+<meta property="og:image"              content="{% static '400x400_icone.png' %}" />
+{% endif %}
 <meta property="og:description"        content="{{ instance.content|striptags|safe|truncatechars_html:100 }}" />
 <meta property="og:site_name"          content="Infantinho" />
 <meta property="og:url"                content="{{ request.build_absolute_uri }}" />
 <meta property="og:type"               content="article" />
-<meta property="og:locale"             content="pt-PT" />
+<meta property="og:locale"             content="pt_PT" />
+<meta property="fb:app_id"             content="1694858034111220" />
 <!-- Author info -->
 <meta property="article:author"        content="https://www.facebook.com/infantinho.xyz" />
 <meta property="article:publisher"        content="https://www.facebook.com/infantinho.xyz" />
+
+
+
+
+
 <!-- End -->
-{% endblock head_extra %}
+{% endblock headcontent %}
       {% block content %}
-      {% load staticfiles %}
       {% include "stmenu.html" %}
         <!-- blog section start -->
         <section class="blog-section section-padding">
