--- a/templates/tmenu.html
+++ b/templates/tmenu.html
@@ -26,7 +26,7 @@
                                 <ul class="dropdown">
                                     <li><a href="#">Presenças</a>
                                         <ul class="dropdown">
-                                            <li><a href="#">Marcar Presenças</a>
+                                            <li><a href="{% url 'record:create' %}">Marcar Presenças</a>
                                             </li>
                                             <li><a href="#">Verificar Presenças</a>
                                             </li>
