--- a/record/templates/record/create_pres.html
+++ b/record/templates/record/create_pres.html
@@ -7,14 +7,81 @@
         {% include 'stmenu.html' %}
           <section class="section-padding">
             <div class="container">
+              <br><br><br><br>
               <form method='POST' action='' enctype='multipart/form-data' >
                 {% csrf_token %}
-                {{ form.as_p }}
-              <input type='submit' class='btn' value='{{ input  }}' />
+                <p style="text-align: center;">
+                {% for sub in subject %}
+                  <button type="button" id="sub_" name="subject" value='{{sub.pk}}' class="btn">{{ sub }}</button>
+                  {% if forloop.last %}
+                </p>
+                {% endif %}
+                {% endfor %}
+                <p><label for="date">Data:</label> <input type="text" name="date" value="{% now "Y-m-j" %}" required id="date" class="datepicker" /></p>
+                <p id="subject" style="text-align: center;"><input type='submit' class='btn' value='GRAVAR' /></p>
+                <p id="grade" style="text-align: center;"><ul id="blogGrid" class="ulpresent"></ul></p>
               </form>
             </div> <!-- container -->
           </section> <!-- section-padding -->
         {% endblock content %}
 {% block bellow_js %}
+<script type="text/javascript">
+          $('.datepicker').pickadate({
+            // Strings and translations
+            monthsFull: ['janeiro', 'fevereiro', 'março', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'],
+            monthsShort: ['jan', 'fev', 'mar', 'abr', 'mai', 'jun', 'jul', 'ago', 'set', 'out', 'nov', 'dez'],
+            weekdaysFull: ['domingo', 'segunda-feira', 'terça-feira', 'quarta-feira', 'quinta-feira', 'sexta-feira', 'sabado'],
+            weekdaysShort: ['dom', 'seg', 'ter', 'qua', 'qui', 'sex', 'sab'],
+            // Buttons
+            today: 'Hoje',
+            clear: 'Limpar',
+            close: 'OK',
+            // Accessibility labels
+            labelMonthNext: 'Próximo',
+            labelMonthPrev: 'Anterior',
+            labelMonthSelect: 'Escolhe o Mês',
+            labelYearSelect: 'Escolhe o Ano',
+            // Formats
+            format: 'd mmmm, yyyy',
+            formatSubmit: 'yyyy-mm-dd',
+            hiddenSuffix: '_submit',
+            // Editable input
+            editable: false,
+            // Dropdown selectors
+            selectYears: 5,
+            selectMonths: true,
+            // Date limits
+            min: new Date(2015,01,01),
+            max: new Date({% now "Y,m,j" %}),
+            // Close on a user action
+            closeOnSelect: true,
+            closeOnClear: true,
+          });
+    </script>
+{% verbatim %}
+<script>
+    $("#sub_").click(function () {
+      var subject = ( $(this).val() );
 
+      $.ajax({
+        type: 'GET',
+        url: '/record/ajax/get_students/',
+        data: {
+          subject: subject
+        },
+        dataType: 'json',
+        success: function (data) {
+          var $div = $('<div>').append(
+                  $('<input type="hidden" name="grade" value="' + data[0].grade + '" />')).appendTo('#grade');
+          var $div = $('<div>').append(
+                  $('<input type="hidden" name="subject" value="' + data[0].subject + '" />')).appendTo('#subject');
+          $.each(data, function(i, e){
+            var $li = $('<li class="lipresent">').append(
+                $('<input class="presinput" name="' + e.id + '" type="checkbox" value="1" id="' + e.id + '"/><label class="preslabel" for="' + e.id + '" style="text-align: center;"><img src="' + e.jpg + '"/><br />' + e.name + '</label>')).appendTo('#blogGrid');
+          });
+        }
+      });
+    });
+  </script>
+{% endverbatim %}
 {% endblock bellow_js %}
