--- a/record/templates/record/print_pres.html
+++ b/record/templates/record/print_pres.html
@@ -58,7 +58,7 @@
 
       $.ajax({
         type: 'GET',
-        url: '/record/ajax/get_print_url/',
+        url: '/ajax/get_print_url/',
         data: {
           subject: subject
         },
