--- a/record/templates/record/print_pres.html
+++ b/record/templates/record/print_pres.html
@@ -26,7 +26,7 @@
                           <div class="entry-content">
                             <p style="text-align: center;">
                             {% for sub in subject %}
-                              <button type="button" id="sub_" name="subject" value='{{sub.pk}}' class="btn">{{ sub }}</button>
+                              <button type="button" id="sub_{{ sub.pk }}" name="subject" value='{{sub.pk}}' class="btn">{{ sub }}</button>
                               {% if forloop.last %}
                             </p>
                             {% endif %}
@@ -35,7 +35,13 @@
                 <div class="row mt-50">
                 <h3 style="text-align: center;">Descarregar:</h3>
                     <div class="col-md-8 col-md-offset-2">
-                        <div class="mt-30" id="download"></div>
+                        <div class="mt-30" id="download" style="text-align: center;">
+                        {% for s in subject %}
+                          <a id="dll_{{ s.pk }}" />
+                        {% endfor %}
+
+                        </div>
+
                     </div>
                 </div><!-- /.row -->
 
@@ -51,9 +57,9 @@
         </section>
         {% endblock content %}
 {% block bellow_js %}
-{% verbatim %}
 <script>
-    $("#sub_").click(function () {
+{% for s in subject %}
+    $("#sub_{{ s.pk }}").click(function () {
       var subject = ( $(this).val() );
 
       $.ajax({
@@ -64,10 +70,10 @@
         },
         dataType: 'json',
         success: function (data) {
-          $('#download').html('<a href="' + data[0].url + '" download="' + data[0].name + '"><button type="button" name="' + data[0].name + '" class="btn">' + data[0].name + '</button></a>');
+          $('#dll_{{ s.pk }}').html('<a href="' + data[0].url + '" download="' + data[0].name + '" class="waves-effect waves-light btn">' + data[0].name + '</a>');
         }
       });
     });
+{% endfor %}
   </script>
-{% endverbatim %}
 {% endblock bellow_js %}
