--- a/record/templates/record/read_pres.html
+++ b/record/templates/record/read_pres.html
@@ -26,7 +26,7 @@
                           <div class="entry-content">
                             <p style="text-align: center;">
                             {% for sub in subject %}
-                              <button type="button" id="sub_" name="subject" value='{{sub.pk}}' class="btn">{{ sub }}</button>
+                              <button type="button" id="sub_{{ sub.pk }}" name="subject" value='{{sub.pk}}' class="btn">{{ sub }}</button>
                               {% if forloop.last %}
                             </p>
                             {% endif %}
@@ -36,13 +36,8 @@
                 <h3 id="subtable" style="text-align: center;"></h3>
                     <div class="col-md-8 col-md-offset-2">
 
-                        <div class="mt-30"></div>
-                        <table class="table table-striped">
-                            <thead id="thead">
-                            </thead>
-                            <tbody id="tbody">
-                            </tbody>
-                        </table>
+                        <div class="mt-30" id="create_table">
+                        </div>
                     </div>
                 </div><!-- /.row -->
 
@@ -58,9 +53,9 @@
         </section>
         {% endblock content %}
 {% block bellow_js %}
-{% verbatim %}
 <script>
-    $("#sub_").click(function () {
+{% for s in subject %}
+    $("#sub_{{ s.pk }}").click(function () {
       var subject = ( $(this).val() );
 
       $.ajax({
@@ -72,15 +67,20 @@
         dataType: 'json',
         success: function (data) {
           $('#subtable').html('Presenças de ' + data[0].subject + ' de ' + data[0].start_date + ' a ' + data[0].end_date + '.');
-          var $tr = $('<tr>').append(
-                  $('<th>Nome</th><th>Presenças</th><th>Faltas</th>')).appendTo('#thead');
+          $('#create_table').html('<table class="table table-striped"><tr><thead><th>Nome</th><th>Presenças</th><th>Faltas</th></thead><tbody id="tbody"></tbody>');
           $.each(data, function(i, e){
-            var $tr = $('<tr>').append(
+            var isLastElement = i == data.length -1;
+            if (isLastElement) {
+              var $tr = $('<tr>').append(
+                $('<th scope="row">' + e.name + '</th><td>' + e.pres + '</td><td>' + e.absent + '</td></table>')).appendTo('#tbody');
+            } else {
+              var $tr = $('<tr>').append(
                 $('<th scope="row">' + e.name + '</th><td>' + e.pres + '</td><td>' + e.absent + '</td>')).appendTo('#tbody');
+            }
           });
         }
       });
     });
+    {% endfor %}
   </script>
-{% endverbatim %}
 {% endblock bellow_js %}
