--- a/herd/templates/herd/upload.html
+++ b/herd/templates/herd/upload.html
@@ -7,6 +7,9 @@
         {% include 'stmenu.html' %}
           <section class="section-padding">
             <div class="container">
+            {% if messages %}
+              <p><h2 class="entry-title"><small>{% include 'sms.html' %}</small></h2></p>
+            {% endif %}
               <form method='POST' action='' enctype='multipart/form-data' >
                 {% csrf_token %}
                 {% form form=form %}{% endform %}
