--- a/templates/tmenu.html
+++ b/templates/tmenu.html
@@ -17,6 +17,8 @@
                             {% if request.user.is_superuser %}
                             <li><a href="javascript:void(0)">Admin</a>
                                 <ul class="dropdown">
+                                <li><a href="{% url 'admin:index' %}">Admin</a>
+                                    </li>
                                     <li><a href="{% url 'herd:upload' %}">Upload Alunos</a>
                                     </li>
                                     <li><a href="{% url 'achiev:upload' %}">Upload Achievs</a>
