--- a/achiev/templates/achiev/read_achiev.html
+++ b/achiev/templates/achiev/read_achiev.html
@@ -17,7 +17,7 @@
 
                             <div class="entry-header">
 
-                              <h2 class="entry-title">Verificar Presenças</h2>
+                              <h2 class="entry-title">Listas de Verificação</h2>
             {% if messages %}
               <p><h2 class="entry-title"><small>{% include 'sms.html' %}</small></h2></p>
             {% endif %}
@@ -26,13 +26,24 @@
                           </header><!-- /.entry-header-wrapper -->
 
                           <div class="entry-content">
+                          {% if is_teacher %}
                             <p style="text-align: center;">
-                            {% for sub in subject %}
-                              <button type="button" id="sub_{{ sub.pk }}" name="subject" value='{{sub.pk}}' class="btn">{{ sub }}</button>
+                            {% for g in grades %}
+                              <button type="button" id="g_{{ g.id }}" name="grade" value='{{ g.id }}' class="btn">{{ g.grade }}</button>
                               {% if forloop.last %}
                             </p>
                             {% endif %}
                             {% endfor %}
+                          {% endif %}
+                          {% if not is_teacher %}
+                            <p style="text-align: center;">
+                            {% for a in areas %}
+                              <button type="button" id="a_{{ a.id }}" name="area" value='{{a.id}}' class="btn">{{ a.area }}</button>
+                              {% if forloop.last %}
+                            </p>
+                            {% endif %}
+                            {% endfor %}
+                          {% endif %}
 
                 <div class="row mt-50">
                 <h3 id="subtable" style="text-align: center;"></h3>
@@ -56,9 +67,9 @@
         {% endblock content %}
 {% block bellow_js %}
 <script>
-{% for s in subject %}
-    $("#sub_{{ s.pk }}").click(function () {
-      var subject = ( $(this).val() );
+{% for g in grades %}
+    $("#g_{{ g.id }}").click(function () {
+      var grade = ( $(this).val() );
 
       $.ajax({
         type: 'GET',
@@ -68,7 +79,7 @@
         },
         dataType: 'json',
         success: function (data) {
-          $('#subtable').html('Presenças de ' + data[0].subject + ' de ' + data[0].start_date + ' a ' + data[0].end_date + '.');
+          $('#subtable').html('Pontos por Áreas de ' + data[0].subject + ' de ' + data[0].start_date + ' a ' + data[0].end_date + '.');
           $('#create_table').html('<table class="table table-striped"><tr><thead><th>Nome</th><th>Presenças</th><th>Faltas</th></thead><tbody id="tbody"></tbody>');
           $.each(data, function(i, e){
             var isLastElement = i == data.length -1;
